--- a/interface.ui
+++ b/interface.ui
@@ -210,6 +210,20 @@
       </object>
     </child>
   </object>
+  <object class="GtkWindow" id="janela_listar">
+    <property name="can-focus">False</property>
+    <child>
+      <object class="GtkTreeView" id="tree_view_pessoas">
+        <property name="width-request">400</property>
+        <property name="height-request">400</property>
+        <property name="visible">True</property>
+        <property name="can-focus">True</property>
+        <child internal-child="selection">
+          <object class="GtkTreeSelection"/>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkWindow" id="janela_principal">
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">Cadastro de Clientes</property>
